# timeschedule_demo

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: push-and-pull-request.yml
static/propellerkit-datetimepicker/css/: pmd-datetimepicker.css
static/propellerkit-datetimepicker/scss/: pmd-datetimepicker.scss
templates/: add.html  index.html  layout.html
tests/: test_main.py
timeschedule/: db.py  main.py  models.py
